# stable-diffusion.cpp

./: .gitmodules  CMakeLists.txt  conditioner.hpp  stable-diffusion.cpp  stable-diffusion.h  util.cpp
src/: common_block.hpp  ggml_extend.hpp  model.cpp  stable-diffusion.cpp  unet.hpp
tests/: CMakeLists.txt  test_sd_1_5.cpp
tests/perf/: test_unet.cpp
